RESOLVED FIXED 191959
[Clang][WebKitLegacy][Win] MarshallingHelpers.h(65,47): warning: extra qualification on member 'windowsEpochAbsoluteTime' [-Wmicrosoft-extra-qualification]
https://bugs.webkit.org/show_bug.cgi?id=191959
Summary [Clang][WebKitLegacy][Win] MarshallingHelpers.h(65,47): warning: extra qualif...
Fujii Hironori
Reported 2018-11-25 21:11:27 PST
[Clang][WebKitLegacy][Win] MarshallingHelpers.h(65,47): warning: extra qualification on member 'windowsEpochAbsoluteTime' [-Wmicrosoft-extra-qualification] clang-cl reports a following compilation warning: > [5870/6237] Building CXX object Source\WebKitLegacy\CMakeFiles\WebKitLegacy.dir\win\WebView.cpp.obj > In file included from ..\..\Source\WebKitLegacy\win\WebView.cpp:34: > ..\..\Source\WebKitLegacy\win/MarshallingHelpers.h(65,47): warning: extra qualification on member 'windowsEpochAbsoluteTime' [-Wmicrosoft-extra-qualification] > static CFAbsoluteTime MarshallingHelpers::windowsEpochAbsoluteTime(); > ~~~~~~~~~~~~~~~~~~~~^ This code has been introduce in following commits. https://trac.webkit.org/changeset/23462 https://trac.webkit.org/changeset/22102
Attachments
Patch (1.39 KB, patch)
2018-11-25 21:18 PST, Fujii Hironori
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.60 MB, application/zip)
2018-11-26 01:47 PST, EWS Watchlist
no flags
Fujii Hironori
Comment 1 2018-11-25 21:18:53 PST
EWS Watchlist
Comment 2 2018-11-26 01:47:39 PST Comment hidden (obsolete)
EWS Watchlist
Comment 3 2018-11-26 01:47:40 PST Comment hidden (obsolete)
Fujii Hironori
Comment 4 2018-11-26 18:09:55 PST
Comment on attachment 355619 [details] Patch Clearing flags on attachment: 355619 Committed r238542: <https://trac.webkit.org/changeset/238542>
Fujii Hironori
Comment 5 2018-11-26 18:09:58 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-11-26 18:10:56 PST
Note You need to log in before you can comment on or make changes to this bug.