[Clang][WebKitLegacy][Win] MarshallingHelpers.h(65,47): warning: extra qualification on member 'windowsEpochAbsoluteTime' [-Wmicrosoft-extra-qualification] https://bugs.webkit.org/show_bug.cgi?id=191959

Reviewed by Alex Christensen.

* MarshallingHelpers.h: Removed extra "MarshallingHelpers::" of windowsEpochAbsoluteTime declaration.

Canonical link: https://commits.webkit.org/206704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238542 268f45cc-cd09-0410-ab3c-d52691b4dbfc